add PGN writer